<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/textViewInfo"
        android:textColor="#0000FF"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/c_f"
        android:layout_width="122dp"
        android:layout_height="54dp"
        android:layout_marginTop="316dp"
        android:text="@string/c_f"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_pulgada" />

    <com.google.android.material.chip.Chip
        android:id="@+id/km_mi"
        android:layout_width="122dp"
        android:layout_height="54dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="28dp"
        android:text="@string/km_mi"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_pulgada" />

    <com.google.android.material.chip.Chip
        android:id="@+id/in_cm"
        android:layout_width="122dp"
        android:layout_height="54dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="212dp"
        android:text="@string/in_cm"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_pulgada" />

    <EditText
        android:id="@+id/et_pulgada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="15"
        android:hint="@string/textViewHintPedir"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/et_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/editTextHintResultado"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_Convertir"
        app:layout_constraintStart_toStartOf="@+id/button_Convertir"
        app:layout_constraintTop_toBottomOf="@+id/button_Convertir" />

    <Button
        android:id="@+id/button_Convertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/buttonConvertir"
        app:layout_constraintEnd_toEndOf="@+id/et_pulgada"
        app:layout_constraintStart_toStartOf="@+id/et_pulgada"
        app:layout_constraintTop_toBottomOf="@+id/et_pulgada" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="174dp"
        android:background="@color/black"
        android:text="TextView"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_pulgada"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/ayuda"
        android:layout_width="67dp"
        android:layout_height="71dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/informacion" />


</androidx.constraintlayout.widget.ConstraintLayout>